[tool.poetry]
name = "lime-install"
version = "0.1.0"
description = ""
authors = ["Filip Arenbo <filip@arenbo.org>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
